Fixed a font weight bug in the welcome section of the site when viewed on mobile

--- a/style.css
+++ b/style.css
@@ -312,6 +312,7 @@ h1:hover {
 @media only screen and (max-width: 550px) {
   h1 {
     text-align: center;
+    font-weight: 150;
   }
 
   #game-pic {
